--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@
 
 body {
 	margin: 0 auto;
+	background-image: url('../images/psychic.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 header {
@@ -19,6 +22,8 @@ h1 {
 	font-weight: bold;
 	font-style: italic;
 	text-align: center;
+	color: #F3E30BFF;
+	text-shadow: -1px 0 red;
 }
 
 .message {
@@ -42,9 +47,25 @@ h1 {
 
 .leftSection {
 	width: 400px;
-	background-color: #C0C0C0FF;
+	/*background-color: #C0C0C0FF;*/
 	margin-left: 10%;
 	padding: 40px;
+/*	animation-name: spin;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;*/
+}
+
+.rotate {
+	position: absolute;
+	width: 400px;
+	height: 320px;
+	top: 20px;
+	left: 10px;	
+	background-color: #FF8400FF;
+	opacity: 0.6;
+	animation-name: spin;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
 }
 
 .rightSection {
@@ -53,7 +74,7 @@ h1 {
     height: 100%;
     top: 0;
     right: 0;
-    background: #C0C0C0FF;
+    /*background: #C0C0C0FF;*/
     padding-top: 50px;
     text-align: center;
     font-family: 'Arial', 'sans-serif';
@@ -69,16 +90,29 @@ h1 {
 	margin: 0 auto;
 	background-color: #A0A0A0FF;
 	margin-bottom: 20px;
+	z-index: 999;
 }
 
 #guesses {
 	color: yellow;
 }
 
+.guesses {
+	z-index: 999;
+}
+
 .footer {
+	position: fixed;
 	height: 120px;
+	width: 100%;
 	color: white;
-	background-color: #404040FF;
+	bottom: 0;
+	background-color: rgba(64, 64, 64, 0.6);
 	padding: 50px;
 	text-align: center;
+}
+
+@keyframes spin {
+	from {transform: rotate(0deg);}
+	to {transform: rotate(360deg);}
 }
