--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,9 +38,10 @@ h1 {
 	width: 90%;
 	max-height: 100%;
 	margin-bottom: 20px;
-}
+}	
 
 .container:after {
+	/*height: 300px;*/
 	content: "";
 	display: block;
 }
@@ -71,7 +72,7 @@ h1 {
 .rightSection {
     position: absolute;
     width: 400px;
-    height: 100%;
+    height: 50%;
     top: 0;
     right: 0;
     /*background: #C0C0C0FF;*/
